--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.6.7'
+		springBootVersion = '2.7.6'
 
 	}
 	repositories {
@@ -16,7 +16,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.6.7'
+	id 'org.springframework.boot' version '2.7.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'groovy'
 	id 'com.google.cloud.tools.jib' version '3.2.0'
@@ -117,6 +117,7 @@ dependencies {
 	implementation group: 'com.sun.xml.ws', name: 'jaxws-ri', version: '2.3.4'
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+	implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
 
 	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
